# portaldot

./: .gitignore  README.md  requirements.md
.github/workflows/: contract-ci.yml  frontend-ci.yml
contracts/guardian_vault/: Cargo.toml  lib.rs  rust-toolchain.toml
docs/: architecture.md  demo-script.md  portaldot-team-message.md  threat-model.md
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/approve/[id]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/recover/: page.tsx
frontend/app/setup/: page.tsx
frontend/components/: AccountBalance.tsx  ConnectWallet.tsx  CountdownTimer.tsx  GuardianList.tsx  Header.tsx  RecoveryStatus.tsx  SiteBackground.tsx  WalletModal.tsx  wallet-logos.tsx
frontend/components/ui/: ActivityFeed.tsx  AnimatedNumber.tsx  Badge.tsx  BentoGrid.tsx  Button.tsx  Card.tsx  GlowCard.tsx  GuardianNetwork.tsx  Input.tsx  LiveBlockClock.tsx  Marquee.tsx  ParticleField.tsx  PixelBlast.tsx  RecoveryTimeline.tsx  ScrollReveal.tsx  SecurityScore.tsx  ShimmerSkeleton.tsx  Spotlight.tsx  Stat.tsx  Stepper.tsx  SuccessCheck.tsx  Tabs.tsx  TypeWriter.tsx
frontend/lib/: abi.ts  contract.ts  format.ts  motion.ts  multisig.ts  portaldot.ts  store.ts  wallet.ts  wallets.ts
frontend/public/: vault-abi.json  vault.wasm
frontend/scripts/: capture-shots.mjs
scripts/: deploy.py  faucet-request.md  seed_demo.py  smoke_e2e.py
